# Python-RISC-V-CPU-Emulator

./: .gitignore  README.md  datapath.py  design_doc.md  encoder_decoder.py  flip_flop.py  gates.py  memory.py  pyproject.toml  register.py  register_file.py  setup.py  utility.py
src/: alu.py  alu_control.py  control_fsm.py  control_unit.py  control_unit_backup.py  datapath.py  datapath_backup.py  encoder_decoder.py  flip_flop.py  fpu.py  fpu_control.py  freg.py  gates.py  instruction_memory.py  main.py  memory.py  memory_unit.py  register.py  register_file.py  rv32f_register_file.py  rv32i_alu.py  rv32i_alu_control.py  rv32i_register_file.py  rv32m_alu.py  rv32m_alu_control.py  utility.py
src/assembler/: __init__.py  assembler.py  instructions.py  tokens.py
tests/: test_alu_basic.py  test_assembler_tokens.py  test_control_fsm.py  test_datapath.py  test_decoders_encoders.py  test_fpu_basic.py  test_memory_unit.py  test_register_file.py
tests/test_data/asm/: edge_cases.hex  example_branch.asm  example_branch.hex  example_prog.asm  example_prog.hex  example_prog2.asm  example_prog2.hex  fpu_add.asm  fpu_add.hex  fpu_mul.asm  read_write_mem.asm  read_write_mem.hex  rv32m.asm  test_basic_add.asm  tokenizer_edge_cases.asm
