[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "risc-v-cpu-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}


[project.scripts]
riscv-sim = "main:main"